test_output.txt
test
+- run test
   +- zig test Debug native 1 errors
/opt/homebrew/Cellar/zig/0.14.0_2/lib/zig/std/testing.zig:150:17: error: Unable to compare untagged union values for type Ident.Idx__union_1383
                @compileError("Unable to compare untagged union values for type " ++ @typeName(@TypeOf(actual)));
                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
error: the following command failed with 1 compilation errors:
/opt/homebrew/Cellar/zig/0.14.0_2/bin/zig test -ODebug --dep base --dep collections --dep types --dep serialization --dep compile --dep reporting --dep parse --dep can --dep tracy --dep builtins --dep build_options --dep legal_details -Mroot=/Users/rtfeldman/code/roc2/src/test.zig --dep serialization --dep collections --dep types -Mbase=/Users/rtfeldman/code/roc2/src/base/mod.zig --dep serialization -Mcollections=/Users/rtfeldman/code/roc2/src/collections/mod.zig --dep serialization --dep base --dep collections --dep compile -Mtypes=/Users/rtfeldman/code/roc2/src/types/mod.zig -Mserialization=/Users/rtfeldman/code/roc2/src/serialization/mod.zig --dep base --dep compile --dep collections --dep types --dep builtins --dep reporting -Mcompile=/Users/rtfeldman/code/roc2/src/compile/mod.zig --dep reporting --dep base -Mreporting=/Users/rtfeldman/code/roc2/src/reporting/mod.zig --dep parse --dep base --dep compile --dep collections --dep tracy --dep reporting -Mparse=/Users/rtfeldman/code/roc2/src/parse/mod.zig --dep base --dep parse --dep collections --dep compile --dep types --dep builtins --dep tracy -Mcan=/Users/rtfeldman/code/roc2/src/canonicalize/Mod.zig --dep build_options --dep builtins -Mtracy=/Users/rtfeldman/code/roc2/src/tracy.zig -Mbuiltins=/Users/rtfeldman/code/roc2/src/builtins/mod.zig -Mbuild_options=/Users/rtfeldman/code/roc2/.zig-cache/c/8aed37a2fe2e597c8c06af667af9a9d7/options.zig -Mlegal_details=/Users/rtfeldman/code/roc2/legal_details -lc --cache-dir /Users/rtfeldman/code/roc2/.zig-cache --global-cache-dir /Users/rtfeldman/.cache/zig --name test --zig-lib-dir /opt/homebrew/Cellar/zig/0.14.0_2/lib/zig/ --listen=- 
Build Summary: 3/7 steps succeeded; 1 failed; 195/195 tests passed
test transitive failure
+- run test transitive failure
|  +- zig test Debug native 1 errors
+- run echo transitive failure
   +- run test (+1 more reused dependencies)
error: the following build command failed with exit code 1:
/Users/rtfeldman/code/roc2/.zig-cache/o/982a14dc187644b11a9881db0576727f/build /opt/homebrew/Cellar/zig/0.14.0_2/bin/zig /opt/homebrew/Cellar/zig/0.14.0_2/lib/zig /Users/rtfeldman/code/roc2 /Users/rtfeldman/code/roc2/.zig-cache /Users/rtfeldman/.cache/zig --seed 0x367799fd -Z77f998a737092204 test
